--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.47.0",
         "react-icons": "^4.11.0",
+        "react-router-dom": "6.4",
         "react-scripts": "5.0.1",
         "recoil": "^0.7.7",
         "recoil-persist": "^5.1.0",
